@@ -1,3 +1,11 @@
 # Minesweeper
 
 A java swing implementation of minesweeper which I made 4 years ago, and cleaned up a bit now.
+
+## Usage
+```bash
+git clone https://github.com/porridgewithraisins/minesweeper
+cd minesweeper
+java --enable-preview -cp bin App
+```
+(Requires that JDK is installed)
